--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>kototechnology</title>
+	<title>KotoTechnology</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css.css" type="text/css" >
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=cyrillic" rel="stylesheet">
