--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>KotoTechnology</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="css.css" type="text/css" >
-	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=cyrillic" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-	<script src="js.js" defer></script>
-</head>
+	<head>
+		<title>???</title>
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Orbitron:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link rel="stylesheet" href="chat.css" type="text/css" >
+		<script src="chat.js" defer></script>
+			
+		</style>
+	</head>
 	<body>
-		<div id="wrapper">
-			<header> <img height="150px" src = "https://clipart-db.ru/file_content/rastr/rastr_animal_005.png"><h1>Переставлятор слов для диплома&reg;</h1></header>
-			<main>
-				<textarea id = "textIn" autofocus placeholder="Жалкий плагиат..."></textarea>
-				<textarea id = "textOut" disabled placeholder="Оригинальный контент..."></textarea>
-			</main>
+		<canvas id="canvas" ></canvas>
+		<div id="cont">
+					<p id="countdown"><p>
+					<img id = "dj1" class = "test" src ="https://vignette.wikia.nocookie.net/disney/images/6/68/GenieAladdin.png/revision/latest?cb=20151218203359&path-prefix=ru">
+					<img id = "dj2" src ="https://vignette.wikia.nocookie.net/disney/images/6/68/GenieAladdin.png/revision/latest?cb=20151218203359&path-prefix=ru">
+			<div>
+				<div id="chat">
+					<div id="vvod">
+						<div id = "inp">
+							<input type="text" id="keyInput">
+							<input type="button" id="button" value = "Отправить">
+						</div>
+					</div>
+						<div id="vivod">
+							<div id="area"></div>
+						</div>
+					</div>
+				</div>
+				<div id="pict"></div>
+			
 			</div>
-<footer>&copy;Все котоправа защищены</footer>
-
-	</body>
+</body>
 </html>
