--- a/evgeshasuka.html
+++ b/evgeshasuka.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css.css" type="text/css" >
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=cyrillic" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-	<script src="js.js" defer></script>
+	<script src="js1.js" defer></script>
 </head>
 	<body>
 		<div id="wrapper">
